# comfyui-SegGPT

./: LICENSE  README.md  __init__.py  models_seggpt.py  pyproject.toml  requirements.txt  seggpt.py  seggpt_app.py  seggpt_engine.py  seggpt_inference.py  seggpt_inference_batch.py  seggpt_test.py  test.py
util/: vitdet_utils.py
