[project]
name = "comfyui-seggpt"
description = "We release the [a/SegGPT model](https://huggingface.co/BAAI/SegGPT/blob/main/seggpt_vit_large.pth) and inference code for segmentation everything, as well as some example images and videos."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/nicehero/comfyui-SegGPT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-SegGPT"
Icon = ""
