[project]
name = "comfyui-seggpt"
description = "SegGPT model for comfyui,segmentation everything with mask prompt. Download (https://huggingface.co/BAAI/SegGPT/blob/main/seggpt_vit_large.pth) in this node path."
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/nicehero/comfyui-SegGPT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nicehero"
DisplayName = "nicehero"
Icon = ""
